2006-12-11  Michael Natterer  <mitch@gimp.org>

	* app/file/file-open.c (file_open_layers): use the image file's
	basename as layer name if we import only one layer or if
	merge_visible was requested. Use "basename - layer name"
	otherwise. Fixes bug #384472.

2006-12-11  Sven Neumann  <sven@gimp.org>

	* app/core/gimptooloptions.[ch]: added API to delete saved
	tool-options.

	* app/tools/gimp-tools.c: don't deal with saving presets, just
	load them on startup. Create the tool-options directory when
	saving tool-options.

	* app/core/gimptoolpresets.[ch]: added new signal that is emitted
	whenever the presets changes. Create the tool-options directory
	when saving a preset.

	* app/widgets/gimptooloptionseditor.[ch]: listen to the "changed"
	signal of GimpToolPresets and queue an idle save.

2006-12-11  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/png.c: reset to factory defaults instead of
	popping up a warning dialog when the user clicks "Load Defaults"
	and hasn't saved default values yet (bug #384673).

2006-12-11  Sven Neumann  <sven@gimp.org>

	* app/actions/tool-options-commands.c
	* app/core/gimptoolpresets.[ch]
	* app/tools/gimp-tools.c: code cleanup.

2006-12-10  Sven Neumann  <sven@gimp.org>

	* app/actions/tool-options-commands.c
	(tool_options_save_new_cmd_callback): pass the toplevel widget as
	parent to gimp_query_string_box().

2006-12-10  Sven Neumann  <sven@gimp.org>

	* app/core/gimptoolpresets.c: do not create empty presets files.

2006-12-10  Sven Neumann  <sven@gimp.org>

	* app/core/Makefile.am
	* app/core/core-types.h
	* app/core/gimptoolpresets.[ch]: added GimpToolPresets, derived
	from GimpList.

	* app/core/gimptoolinfo.[ch]: use the new type, renamed
	member "options_presets" to "presets".

	* app/actions/tool-options-actions.c
	* app/actions/tool-options-commands.c
	* app/core/gimptooloptions.[ch]
	* app/menus/tool-options-menu.c
	* app/widgets/gimptooloptionseditor.c: changed accordingly.
